--- a/src/index.html
+++ b/src/index.html
@@ -8,31 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <canvas id="canvas" class="canvas" width="800" height="600"></canvas>
-      <div class="sidebar">
-        <div>Score: <span id="score">0</span></div>
-
-        <div>
-          <label for="difficulty">Difficulty: </label>
-          <select id="difficulty" name="difficulty">
-            <option value="5">Easy</option>
-            <option value="10" selected>Normal</option>
-            <option value="25">Hard</option>
-            <option value="35">Extreme</option>
-          </select>
-        </div>
-        <button id="start">Start game</button>
-
-        <div class="instructions">
-          <h4>Instructions:</h4>
-          <ul>
-            <li>Use ← → ↑ ↓ to move the snake around</li>
-            <li>Pick up the food to grow bigger</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <script src="/dist/main.js"></script>
+    <div id="game" class="container"></div>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
